--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     dependencies {
 
     }
+
 }
 
 allprojects {
@@ -49,6 +50,7 @@ project(":desktop") {
         api "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         
     }
+
 }
 
 project(":core") {
@@ -60,6 +62,10 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         implementation 'org.mongodb:mongodb-driver-sync:4.9.1'
+        implementation 'org.slf4j:slf4j-log4j12:2.0.7'
+        implementation 'ch.qos.logback:logback-classic:1.2.3'
+
         
     }
+
 }
